# max-number-neighborhood

./: .gitignore  README.md  run.sh
src/: CMakeLists.txt  main.c
src/blogic/: max_searcher.c  neighborhood_finder.c  repr.c
src/common/: cmd.c  list.c
src/include/: alloc.h  cmd.h  list.h  utils.h
src/include/blogic/: max_searcher.h  neighborhood_finder.h  repr.h
src/include/common/: cmd.h  list.h  utils.h
